# dds

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/luntek/chiplink/test/dds/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/fastcdr/: config.h
app/src/main/cpp/include/uxr/agent/: Agent.hpp  config.hpp
app/src/main/java/com/luntek/chiplink/test/dds/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/luntek/chiplink/test/dds/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
microdds/: build.gradle
microdds/src/androidTest/java/com/luntek/chiplink/microdds/: ExampleInstrumentedTest.java
microdds/src/main/: AndroidManifest.xml
microdds/src/main/java/com/luntek/chiplink/microdds/: DDS.java  MainActivity.java
microdds/src/main/res/values/: strings.xml  themes.xml
microdds/src/test/java/com/luntek/chiplink/microdds/: ExampleUnitTest.java
